<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:visibility="visible"
    tools:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="104dp"
        android:layout_height="63dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="148dp"
        android:text="@string/HRM"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent"

        android:textColorLink="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="468dp"
        android:layout_marginBottom="150dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/verivy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText2"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:background="@color/colorPrimaryDark"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="99dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/passwords"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:background="@color/colorPrimary"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="33dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="68dp"
        android:text="@string/hr_value"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="279dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="149dp"
        android:text="@string/LOGIN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:background="@color/design_default_color_primary" />

</androidx.constraintlayout.widget.ConstraintLayout>